<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createMeetingActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.MeetingCreation">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMeetingCreation"
        style="@style/ToolbarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/steelBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Create a meeting"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageViewMeetingCreation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineMeetingCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMeetingCreation"
        app:srcCompat="@drawable/meeting" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMeetingCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfieldMeetingNameMeetingCreation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/name_of_the_meeting"
        app:layout_constraintBottom_toTopOf="@+id/textfieldMeetingTopicMCA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineMeetingCreation"
        app:startIconDrawable="@drawable/ic_action_meeting_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfieldInputMeetingNameCreation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfieldMeetingTopicMCA"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/topic_of_the_meeting"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSpinnerMeetingCreation"
        app:layout_constraintEnd_toEndOf="@+id/textfieldMeetingNameMeetingCreation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textfieldMeetingNameMeetingCreation"
        app:layout_constraintTop_toBottomOf="@+id/textfieldMeetingNameMeetingCreation"
        app:startIconDrawable="@drawable/ic_action_meeting_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfieldInputMeetingTopicCreation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSpinnerMeetingCreation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetDateMeetingCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfieldMeetingTopicMCA">

        <Spinner
            android:id="@+id/spinnerMeetingCreation"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonSetDateMeetingCreation"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/cornFlowerBlue"
        android:text="@string/set_date"
        app:icon="@drawable/ic_action_calendar"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartTimeMeetingCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSpinnerMeetingCreation" />

    <Button
        android:id="@+id/buttonStartTimeMeetingCreation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/starts_at"
        android:textColor="@color/white"
        app:backgroundTint="@color/cornFlowerBlue"
        app:layout_constraintEnd_toStartOf="@+id/buttonEndTimeMeetingCreation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetDateMeetingCreation" />

    <Button
        android:id="@+id/buttonEndTimeMeetingCreation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ends_at"
        android:textColor="@color/white"
        app:backgroundTint="@color/cornFlowerBlue"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonStartTimeMeetingCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStartTimeMeetingCreation" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewParticipantsDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddParticipantsMeetingCreation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTimeMeetingCreation"
        app:strokeColor="@color/darkSlateGray"
        app:strokeWidth="1dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextViewParticipantsMeetingCreation"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/buttonAddParticipantsMeetingCreation"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_participants"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonValidationMeetingCreation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewParticipantsDisplay"
        app:layout_constraintTop_toBottomOf="@+id/buttonEndTimeMeetingCreation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonValidationMeetingCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_action_check_meeting_creation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>