<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    android:scrollbars="vertical"
    tools:context=".controller.MeetingDetails">

...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMeetingNameDetailActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
...
                app:layout_constraintBottom_toTopOf="@+id/textViewTopicDetailActivity"
                app:layout_constraintEnd_toEndOf="@+id/textViewTopicDetailActivity"
                app:layout_constraintStart_toStartOf="@+id/textViewTopicDetailActivity"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDateDisplayDetailActivity"
                style="@style/textView_detail_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewDateDetailActivity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewTopicDisplayDetailActivity"
                tools:text="Date of the meeting" />

            <TextView
                android:id="@+id/textViewTopicDetailActivity"
                style="@style/textView_detail_activity"
                android:layout_width="0dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/meeting_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewStartingTimeDisplayDetailActivity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewStartingTimeDisplayDetailActivity"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
...
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewEndingTimeDisplayDetailActivity"
                app:layout_constraintStart_toEndOf="@+id/textViewStartingTimeDetailActivity"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="14:00" />

            <TextView
                android:id="@+id/textViewEndingTimeDisplayDetailActivity"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/participants" />

            <TextView
                android:id="@+id/textViewParticipantsDisplayDetailActivity"
                style="@style/textView_detail_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                tools:text="List of participants" />
        </LinearLayout>
...
