...
    <string name="name_of_the_meeting">Name of the meeting</string>
    <string name="topic">Topic</string>
    <string name="starts">Starts</string>
    <string name="participants">Participants</string>
    <string name="reset_filters">Reset filters</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="filter_meetings">Filter meetings by date, meeting room or both</string>
    <string name="apply_filters">Apply filters</string>
    <string name="meeting_time">Meeting time</string>
    <string name="open_new_meeting">open new meeting</string>
    <string-array name="meeting_room_spinner">
        <item>SELECT A MEETING ROOM</item>
        <item>AMSTERDAM</item>
        <item>BERLIN</item>
        <item>BRUSSELS</item>
        <item>BUCHAREST</item>
        <item>LONDON</item>
        <item>MADRID</item>
        <item>MILAN</item>
...
